--- a/css/default.css
+++ b/css/default.css
@@ -3,9 +3,9 @@ body{margin:0;padding:0;background:#ffe;font-size:14px;
     color:#231F20;overflow:auto}
 a {color:#000;font-size:14px;}
 #main{width:100%;}
-#wrap{position:relative;margin:0 auto;width:1100px;height:100%;margin-top:10px;}
-#text{width:400px;height:425px;left:60px;top:80px;position:absolute;}
-#code{display:none;font-size:16px;}
+#wrap{position:relative;margin:0 auto;width:1100px;height:100%;margin-top:100px;}
+#text{width:400px;height:425px;left:60px;top:60px;position:absolute;}
+#code{display:none;font-size:18px;font-weight:bold}
 #clock-box {position:absolute;left:60px;bottom:-25px;font-size:18px;display:none;}
 #clock-box a {font-size:18px;text-decoration:none;}
 #clock{margin-left:10px;}
